feat: add plugin system
