# manager/api/proxy/route/dto/route.go
@@ -7,13 +7,36 @@ import (
 )
 
 type Route struct {
-	Uuid                 string                        `json:"uuid" validate:"omitempty,uuid"`
-	Host                 string                        `json:"host" validate:"required"`
-	Path                 string                        `json:"path" validate:"omitempty"`
-	LoadBalancerStrategy balancer.LoadBalancerStrategy `json:"load_balancer_strategy" validate:"required"`
-	CircuitBreaker       *circuitbreaker.Settings      `json:"circuit_breaker,omitempty" validate:"omitempty"`
-	HealthCheck          *HealthCheckConfig            `json:"health_check,omitempty" validate:"omitempty"`
+	Uuid                 string                         `json:"uuid" validate:"omitempty,uuid"`
+	Host                 string                         `json:"host" validate:"required"`
+	Path                 string                         `json:"path" validate:"omitempty"`
+	LoadBalancerStrategy balancer.LoadBalancerStrategy  `json:"load_balancer_strategy" validate:"required"`
+	CircuitBreaker       *circuitbreaker.Settings       `json:"circuit_breaker,omitempty" validate:"omitempty"`
+	HealthCheck          *healthcheck.HealthCheckConfig `json:"health_check,omitempty" validate:"omitempty"`
+	//Plugins              *Plugins                       `json:"plugins,omitempty" validate:"omitempty"`
 }
+
+type CreateRouteReq struct {
+	Uuid                 string                         `json:"uuid" validate:"omitempty,uuid"`
+	Host                 string                         `json:"host" validate:"required"`
+	Path                 string                         `json:"path" validate:"omitempty"`
+	LoadBalancerStrategy balancer.LoadBalancerStrategy  `json:"load_balancer_strategy" validate:"required"`
+	CircuitBreaker       *circuitbreaker.Settings       `json:"circuit_breaker,omitempty" validate:"omitempty"`
+	HealthCheck          *healthcheck.HealthCheckConfig `json:"health_check,omitempty" validate:"omitempty"`
+}
+
+//type Plugins struct {
+//	Middleware          []*Plugin `json:"Middleware,omitempty" validate:"omitempty"`
+//	InterceptorRequest  []*Plugin `json:"RequestInterceptor,omitempty" validate:"omitempty"`
+//	InterceptorResponse []*Plugin `json:"ResponseInterceptor,omitempty" validate:"omitempty"`
+//}
+//
+//type Plugin struct {
+//	Name        string      `json:"name" validate:"required"`
+//	Description string      `json:"description" validate:"omitempty"`
+//	Priority    int         `json:"priority" validate:"required,gte=1,lte=1000"`
+//	Config      interface{} `json:"config,omitempty" validate:"omitempty"`
+//}
 
 // CircuitBreakerConfig holds the configuration for the circuit breaker.
 //type CircuitBreakerConfig struct {
@@ -30,11 +53,27 @@ type HealthCheckConfig struct {
 
 // TODO: Use this later when route handler update was implemented
 type UpdateRouteReq struct {
-	Uuid                 string                        `json:"uuid" validate:"required,uuid"`
-	Host                 string                        `json:"host"`
-	Path                 string                        `json:"path" validate:"omitempty"`
-	LoadBalancerStrategy balancer.LoadBalancerStrategy `json:"load_balancer_strategy" validate:"omitempty"`
+	//Uuid                 string                         `json:"uuid" validate:"required,uuid"`
+	Host                 string                         `json:"host"`
+	Path                 string                         `json:"path" validate:"omitempty"`
+	LoadBalancerStrategy balancer.LoadBalancerStrategy  `json:"load_balancer_strategy,omitempty" validate:"omitempty"`
+	CircuitBreaker       *circuitbreaker.Settings       `json:"circuit_breaker,omitempty" validate:"omitempty"`
+	HealthCheck          *healthcheck.HealthCheckConfig `json:"health_check,omitempty" validate:"omitempty"`
+	//Plugins              *Plugins                       `json:"plugins,omitempty" validate:"omitempty"`
 }
+
+//type AttachPluginReq struct {
+//	Name        string            `json:"name" validate:"required"`
+//	Type        plugin.PluginType `json:"type" validate:"required"`
+//	Config      interface{}       `json:"config" validate:"required"`
+//	Description string            `json:"description" validate:"omitempty"`
+//	Priority    int               `json:"priority" validate:"required,gte=1,lte=1000"`
+//}
+//
+//type DetachPluginReq struct {
+//	PluginName string            `json:"plugin_name" validate:"required"`
+//	PluginType plugin.PluginType `json:"plugin_type" validate:"required"`
+//}
 
 type CreateRouteRes struct {
 	Uuid string `json:"uuid"`
